syntax = "proto3";

option go_package = "./pb";

message RequestVoteArgs {
    int64 term = 1;
    int64 candidateId = 2;
    int64 lastLogIndex = 3;
    int64 lastLogTerm = 4;
}

message AppendEntriesArgs {
    int64 term = 1;
    int64 leaderId = 2;

    int64 prevLogIndex = 3;
    int64 prevLogTerm = 4;

    repeated LogEntry entries = 5;
    int64 leaderCommit = 6;
}

message LogEntry { string entry = 1; int64 applicationTerm = 2; }
message RequestVoteResponse { int64 currentTerm = 1; bool voteGranted = 2; }
message AppendEntriesResponse { int64 currentTerm = 1; bool accepted = 2; }

service Graft {
    rpc RequestVote(RequestVoteArgs) returns (RequestVoteResponse) {};
    rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesResponse) {};
}